# cq2pyg

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: test.md
.claude/skills/test-writer/: SKILL.md
src/cq2pyg/: __init__.py  converter.py  features.py  geometry.py  topology.py  types.py
src/cq2pyg/tests/: __init__.py  test_converter.py
tests/: test_converter.py
