[project]
name = "cq2pyg"
version = "0.1.0"
description = "Convert CadQuery B-Rep objects to PyTorch Geometric graphs"
requires-python = ">=3.10,<3.13"
dependencies = [
    "cadquery>=2.5.0",
    "torch>=2.0.0",
    "torch_geometric>=2.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cq2pyg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
